# pet-dragon

./: Cargo.toml  LICENSE  README.md  castling.rs  mod.rs  pawns.rs
.github/workflows/: aggregate_opening_stats.yml  build.yml  deploy.yml  eval_diag.yml  lichess_sample.yml  match_runner.yml  selfplay.yml  texel_diag.yml  texel_gen.yml  texel_tune.yml  train_nnue.yml  uci_match_runner.yml
docs/: DECISIONS.md  ENGINE_ARCHITECTURE.md  PROJECT_CONTEXT.md  ROADMAP.md  SESSION_LOG.md  VARIANT_ARCHITECTURE.md
src/: lib.rs  main.rs  material.rs  opening_stats.rs  types.rs
src/bitboard/: magic.rs  masks.rs  mod.rs
src/eval/: king_safety.rs  material.rs  mobility.rs  mod.rs  open_lines.rs  pawns.rs  tables.rs  threats.rs
src/movegen/: castling.rs  legal.rs  mod.rs  pawns.rs  pieces.rs
src/nnue/: delta.rs  features.rs  inference.rs  mod.rs
src/position/: fen.rs  make_move.rs  mod.rs  setup.rs  zobrist.rs
src/search/: alpha_beta.rs  iterative.rs  mod.rs  ordering.rs  pruning.rs  see.rs  skill.rs  time.rs
src/syzygy/: mod.rs
src/texel/: features.rs  mod.rs  predict.rs  predict_f64.rs  weights.rs  weights_f64.rs
src/tt/: mod.rs
tests/: make_unmake.rs  node_count.rs  perft.rs  setup.rs
web/: index.html
web/pit/: vs.html
