[package]
name = "pet_dragon"
version = "0.1.0"
edition = "2021"
authors = ["Gokul Chandar"]
description = "Pet Dragon — world's first original chess variant engine in Rust"
license = "GPL-3.0"
repository = "https://github.com/g-c-3/pet-dragon"
homepage = "https://g-c-3.github.io/pet-dragon"
keywords = ["chess", "engine", "variant", "wasm", "uci"]
categories = ["game-engines"]

# ── Build targets ────────────────────────────────────────────────────────────
# lib = shared engine code (used by both native binary and WASM)
# bin = native UCI binary for desktop GUIs

[[bin]]
name = "pet_dragon"
path = "src/main.rs"

[lib]
name = "pet_dragon_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# cdylib = needed for WASM
# rlib   = needed for tests and native binary

# ── Dependencies ─────────────────────────────────────────────────────────────

[dependencies]
# WASM bindings — lets Rust talk to JavaScript in the browser
wasm-bindgen = "0.2"

# JavaScript interop types (used with wasm-bindgen)
js-sys = "0.3"

# Random number generation — works in both native and WASM environments
# The "js" feature makes it work in the browser via Math.random()
getrandom = { version = "0.2", features = ["js"] }

# ── Dev dependencies (only used during testing) ───────────────────────────────

[dev-dependencies]
# Benchmarking framework — used to measure NPS (nodes per second)
criterion = { version = "0.5", features = ["html_reports"] }

# ── Build profiles ────────────────────────────────────────────────────────────

# Native release build — maximum speed
[profile.release]
opt-level = 3          # Maximum optimisation
lto = true             # Link-time optimisation (faster binary)
codegen-units = 1      # Single unit = better optimisation
panic = "abort"        # Smaller binary, faster panics
strip = true           # Strip debug symbols from binary

# WASM release build — minimum file size for fast browser loading
[profile.release-wasm]
inherits = "release"
opt-level = "z"        # Optimise for size (smallest .wasm file)
lto = true
codegen-units = 1
panic = "abort"

# ── Feature flags ─────────────────────────────────────────────────────────────

[features]
default = []
# "wasm" feature enables browser-specific code paths
wasm = ["wasm-bindgen", "js-sys", "getrandom/js"]
