[package]
name = "pet_dragon"
version = "0.1.0"
edition = "2021"
authors = ["Gokul Chandar"]
description = "Pet Dragon — world's first original chess variant engine in Rust"
license = "GPL-3.0"
repository = "https://github.com/g-c-3/pet-dragon"
homepage = "https://g-c-3.github.io/pet-dragon"
keywords = ["chess", "engine", "variant", "wasm", "uci"]
categories = ["game-engines"]

# ── Build targets ─────────────────────────────────────────────────────────────

[[bin]]
name = "pet_dragon"
path = "src/main.rs"

[lib]
name = "pet_dragon_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
# WASM bindings — marked optional so they only compile when targeting WASM
wasm-bindgen = { version = "0.2", optional = true }

# JavaScript interop types — also optional, only needed for WASM
js-sys = { version = "0.3", optional = true }

# Random number generation
# "js" feature makes it work in the browser via Math.random()
# Also optional — only needed for WASM target
getrandom = { version = "0.2", optional = true }

# ── Dev dependencies ──────────────────────────────────────────────────────────

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# ── Feature flags ─────────────────────────────────────────────────────────────
# The "wasm" feature pulls in all browser-specific dependencies at once.
# Native builds use no extra dependencies — keeps the binary lean.

[features]
default = []
wasm = [
    "wasm-bindgen",
    "js-sys",
    "getrandom/js",
]

# ── Build profiles ────────────────────────────────────────────────────────────

# Native release — maximum speed
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# WASM release — minimum file size
[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
