[package]
name = "pet_dragon"
version = "0.1.0"
edition = "2021"
authors = ["Gokul Chandar"]
description = "Pet Dragon — world's first original chess variant engine in Rust"
license = "GPL-3.0"
repository = "https://github.com/g-c-3/pet-dragon"
homepage = "https://g-c-3.github.io/pet-dragon"
keywords = ["chess", "engine", "variant", "wasm", "uci"]
categories = ["game-engines"]

# ── Build targets ─────────────────────────────────────────────────────────────

[[bin]]
name = "pet_dragon"
path = "src/main.rs"

[lib]
name = "pet_dragon_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
# WASM bindings — marked optional so they only compile when targeting WASM
wasm-bindgen = { version = "0.2", optional = true }

# JavaScript interop types — also optional, only needed for WASM
js-sys = { version = "0.3", optional = true }

# Panic hook forwarding Rust panics to the browser console — without this,
# a wasm32 panic is a silent trap and the UI hangs with no error anywhere.
# Optional, wasm-only.
console_error_panic_hook = { version = "0.1", optional = true }

# std::time::Instant::now() panics at runtime on wasm32-unknown-unknown (no
# clock source). web-time is a drop-in replacement: real std::time on every
# other target, Performance.now()-backed Instant on wasm32. This was the
# root cause of the browser engine hanging on "Engine thinking..." forever
# (Session 25 bug fix) — used unconditionally in search/mod.rs so native
# and browser search behave identically.
web-time = "1.1"

# Random number generation
# "js" feature makes it work in the browser via Math.random()
# Also optional — only needed for WASM target
getrandom = { version = "0.2", features = ["std"] }

# NNUE training + inference (Phase 16). Zero-dependency, pure Rust; upstream
# confirms WASM support out of the box (unlike pyrrhic-rs, no libc dep) —
# lives in ordinary [dependencies], no wasm32 exclusion needed.
noru = "2.2"

# ── Platform-specific dependencies ────────────────────────────────────────────
# pyrrhic-rs: Syzygy tablebase probing — native targets only.
# pyrrhic-rs uses libc, which is incompatible with wasm32.
# Original C code: Fathom © 2015 basil; mods © 2016-2019 Jon Dart;
#                  mods © 2020 Andrew Grant. Rust port © Algorhythm-sxv (MIT).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyrrhic-rs = "0.2"

# ── Dev dependencies ──────────────────────────────────────────────────────────

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

# ── Feature flags ─────────────────────────────────────────────────────────────
# The "wasm" feature pulls in all browser-specific dependencies at once.
# Native builds use no extra dependencies — keeps the binary lean.

[features]
default = []
wasm = [
    "wasm-bindgen",
    "js-sys",
    "getrandom/js",
    "console_error_panic_hook",
]

# ── wasm-pack config ──────────────────────────────────────────────────────────
# Disable wasm-opt: the bundled wasm-opt version in wasm-pack does not support
# the bulk memory proposal (memory.copy instruction) emitted by rustc.
# This avoids the "Bulk memory operations require bulk memory" fatal error.
# The unoptimised WASM is still perfectly functional; re-enable when wasm-pack
# ships a newer wasm-opt binary.

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# ── Build profiles ────────────────────────────────────────────────────────────

# Native release — maximum speed
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Benchmark-tests profile — release optimisations but with panic=unwind
# Required because cargo test needs unwinding to catch test panics.
# Used by the "Node Count Bench" CI job: cargo test --profile bench-tests
[profile.bench-tests]
inherits      = "release"
panic         = "unwind"   # cargo test needs this — do NOT change to abort
lto           = false       # faster CI compile; NPS is clock-wall anyway
strip         = false       # keep test binary symbols for readable output

# WASM release — minimum file size
[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
